TEST_PROGRAMS/INVALID/05/lhs_expression_in_var_dec.go
/* L.H.S. expression in variable declaration. */

package main

var x, y = true, false
var x || y [10] int = a

func main() {
	// Do nothing.
}
